recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: reassignment to val
  length=length+increment
        ^